# rnpinturas_api

./: .env.example  README.md  ROADMAP.md  manage.py  pyproject.toml  requirements.txt  update_packages.py
apps/cities/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/cities/migrations/: 0001_initial.py  0002_populate_ibge_data.py
apps/clients/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py  0002_alter_client_cpf_cnpj.py  0003_alter_clientaddress_district_and_more.py  0004_alter_client_cpf_cnpj.py
apps/common/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
apps/common/migrations/: 0001_initial.py
apps/materials/: admin.py  apps.py  models.py
apps/materials/migrations/: 0001_initial.py
apps/orders/: admin.py  apps.py  models.py
apps/orders/migrations/: 0001_initial.py
apps/rooms/: admin.py  apps.py  models.py
apps/rooms/migrations/: 0001_initial.py
apps/services/: admin.py  apps.py  models.py
apps/services/migrations/: 0001_initial.py
rnpinturas/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/css/: apps_delete.css  apps_detail.css  apps_form.css  apps_home.css  apps_list.css  buttons.css  footer.css  global.css  header.css  home.css  login.css  modals.css  pagination.css  record_counter.css  select2_custom.css  styles.css  vertical_tab.css
static/js/: ajax_table.js  apps-scripts.js  checkbox-toggle.js  form_validation.js  modal.js  modal_actions.js  pagination.js  select2.js  theme-switcher.js  vertical_tab.js
templates/: base.html  css_includes.html  home.html  js_includes.html
templates/clients/: client_detail.html  client_form.html  client_home.html  client_list.html
templates/includes/: apps_confirm_delete.html  apps_detail.html  apps_form.html  apps_home.html  apps_list.html  footer.html  modals.html  pagination.html  partial_delete_card.html  partial_list_results.html  record_counter.html  records_per_page_selector.html  search_fields.html  table.html
templates/registration/: login.html  password_change_done.html  password_change_form.html
templates/two_factor/: _base.html
templates/two_factor/core/: login.html  setup.html
templates/two_factor/profile/: profile.html
templatetags/: custom_filters.py
