[project]
name = "rnpinturas-api"
version = "0.1.0"
description = ""
authors = [
    {name = "André Ventura",email = "ti@asventura.com.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0,<7.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "weasyprint (>=67.0,<68.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "django-stubs (>=5.2.8,<6.0.0)",
    "djlint (>=1.36.4,<2.0.0)"
]

[tool.ruff]
line-length = 100               # 88 é black default, 100 é mais confortável para a maioria
target-version = "py314"        # já que você usa >=3.14
indent-width = 4
extend-exclude = [
    "migrations",               # migrations quase sempre quebram lint
    "venv",
    ".venv",
    ".git",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"          # ou "single" se preferir
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Grupos principais recomendados (muito comum em projetos Django 2025)
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, etc)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernizações python)
    "B",      # bugbear (bugs comuns)
    "C4",     # comprehensions melhoradas
    "PIE",    # pieces of cake (simplificações)
    "PL",     # pylint-like (muitos acham bom equilíbrio)
    "RUF",    # regras específicas do ruff
    "DJ",     # flake8-django (regras específicas do Django!)
    "C90",    # complexidade mccabe (opcional)
]

# Ignorar algumas regras comuns em projetos Django
ignore = [
    "E501",     # line too long (já controlamos com line-length)
    "DJ001",    # nullable string fields — muitos usam null=True em CharField
    "F401",     # unused import — signals e apps.py quebram muito
    "D100",     # missing docstring in public module (opcional)
    "D101",     # missing docstring in public class
    "ANN",      # anotações de tipo (deixe mypy cuidar disso)
]

# Ignorar regras por arquivo/pasta (muito importante no Django)
[tool.ruff.lint.per-file-ignores]
"**/*migrations/*.py" = ["E", "F", "W", "I", "PL", "UP", "DJ"]  # migrations ignoram quase tudo
"**/tests/**.py"      = ["S101", "ANN", "D", "PLR2004"]        # testes podem usar assert, sem docstring pesada
"**/settings.py"      = ["E402", "F401"]                       # imports locais e django.setup()
"**/apps.py"          = ["F401"]                               # signals normalmente importam sem usar
"**/*admin*.py"       = ["RUF012"]                             # mutable default args em admin são comuns
